[package]
name = "scrutinizer-agent"
version = "0.1.0"
authors = ["Rafael <rvillegasm@eafit.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
sodiumoxide = "0.2.5"
mongodb = "0.10.0"
bson = "0.14.1"